# vcs

./: Makefile  README.md  requirements  run.bash  run.bat
assets/pdn/: add_sign.pdn  neon_add_button.pdn  neon_confirm_button.pdn  neon_remove_button.pdn  neon_view_button.pdn
debug/: CMakeCache.txt  CMakeLists.txt  Makefile  arr.cpp  autoref  autoref.cpp  capture  capture.cpp  cmake  cmake_install.cmake  conv.cpp  demo  goals  grid  grid.cpp  inheritance.cpp  main.cpp  maps.cpp  randomness.cpp  shadow.cpp  std_func  std_func.cpp  structs.cpp  test.cpp  thread_stuff.cpp  timer.cpp  togglable_balls.cpp  ts.c  ts.cpp  tuple  tuple.cpp  utils  utils.cpp  utils.hpp  vec  vec.cpp  wtf.cpp
debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
debug/boxes/: box.cpp  box.hpp  boxes.cpp
debug/demo_autogen/: deps  moc_predefs.h
src/: .plan  Makefile  _.hpp  building.hpp  button.cpp  common.hpp  gui.cpp  inventory.cpp  main.cpp  utils.hpp
src/buildings/: base-building.cpp  base-building.hpp
src/buildings/factory/: factory.cpp  factory.hpp
src/buildings/house/: house.cpp  house.hpp
src/buildings/park/: park.cpp  park.hpp
src/classes/: city.cpp  city.hpp  simulation.cpp  simulation.hpp
src/classes/buildings/: base-building.cpp  base-building.hpp
src/classes/buildings/factory/: factory.cpp  (+1 more)
src/data/: b  building  building.cpp  building.hpp  common.hpp  enums.hpp  random.cpp  random.hpp  test.cpp
src/gui/: a.out  asset.cpp  asset.hpp  box.cpp  box.hpp  button.cpp  gui.cpp  gui.hpp  main.cpp  menu.cpp  utils.hpp
src/utils/: common.hpp  utils.cpp  utils.hpp
(+4 files in other folders)
